add charts,update table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.database=local
+#spring.data.mongodb.database=local
 #spring.data.mongodb.user=adminuser
 #spring.data.mongodb.password=password123
-spring.data.mongodb.uri: mongodb://adminuser:password123@a22437652ec75464b9aec75355b895fe-699670675.us-east-2.elb.amazonaws.com:27017/?authSource=admin
+#spring.data.mongodb.uri: mongodb://adminuser:password123@a22437652ec75464b9aec75355b895fe-699670675.us-east-2.elb.amazonaws.com:27017/?authSource=admin
