--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 #spring.data.mongodb.user=adminuser
 #spring.data.mongodb.password=password123
 #spring.data.mongodb.uri: mongodb://adminuser:password123@a22437652ec75464b9aec75355b895fe-699670675.us-east-2.elb.amazonaws.com:27017/?authSource=admin
+
+spring.main.web-application-type=none
